[project]
name            = "tomler"
version         = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.10"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {email = "jgrey.n.plus.one@gmail.com"},
  {name  = "John Grey"}
]
classifiers     = [
  "Programming Language :: Python"
]

##-- dependencies
dependencies   = [
    "toml; python_version<'3.11'"
]

[project.optional-dependencies]
test = [
     "pytest > 7.0.0",
]
write = [
     "toml-w"
]

##-- end dependencies

##-- urls
[project.urls]
homepage      = "https://github.com/jgrey4296/toml_config"
documentation = "https://readthedocs.org/toml_config"
repository    = "https://github.com/jgrey4296/toml_config"
changelog     = "https://github.com//toml_config/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]

##-- end scripts

##-- build system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["tomler*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.exclude-package-data]

##-- end build system

# Tools #######################################################################

##-- pyright
[tool.pyright]
# strict = toml_config.*
verboseOutput               = true
typeCheckingMode            = "strict"
pythonVersion               = "3.10"

reportUnusedImport          = false
reportAssertAlwaysTrue      = "information"
reportMissingParameterType  = "warning"
reportMissingTypeArgument   = "warning"
reportMissingTypeStubs      = "warning"
reportUnknownMemberType     = "warning"
reportUnknownParameterType  = "information"
reportUnknownVariableType   = "warning"
reportUnnecessaryCast       = "information"
reportUnnecessaryIsInstance = "warning"

##-- end pyright

##-- pytest
[tool.pytest.ini_options]
log_cli       = false
log_level     = "DEBUG"
log_cli_level = "DEBUG"

##-- end pytest
